# xraft

./: .gitignore  Cargo.toml  README.md  build-errors.txt
.github/workflows/: ci.yml
docs/stories/raft-RAFT-PROTOCOL/: architecture.md  architecture.md.iter-snapshot.bak  e2e-scenarios.md  e2e-scenarios.md.iter-snapshot.bak  implementation-plan.md  implementation-plan.md.iter-snapshot.bak  tech-spec.md  tech-spec.md.iter-snapshot.bak  workstreams.json  workstreams.yaml
xraft-core/: Cargo.toml
xraft-core/src/: app_record.rs  config.rs  consensus_state.rs  deferred_completion.rs  election.rs  error.rs  event_loop.rs  follower_progress.rs  io_action.rs  io_stage.rs  lib.rs  listener.rs  listener_event.rs  log_entry.rs  membership.rs  node_state.rs  quorum_state.rs  raft_node.rs  replication.rs  rpc.rs  snapshot.rs  snapshot_coordinator.rs  traits.rs  types.rs  voter.rs
xraft-core/tests/: domain_types.rs  election_tests.rs  listener_tests.rs
xraft-storage/: Cargo.toml
xraft-storage/src/: leader_epoch_checkpoint.rs  lib.rs  memory_log.rs  memory_log_store.rs  memory_quorum_state.rs  quorum_state_file.rs  segment.rs  segment_index.rs  segment_log.rs  snapshot_store.rs
xraft-storage/tests/: segment_log_integration.rs
xraft-test/: Cargo.toml
xraft-test/src/: check_quorum_tests.rs  completion_tracker.rs  invariant_checker.rs  lib.rs  memory_log.rs  memory_quorum_state.rs  memory_snapshot.rs  memory_state_machine.rs  raft_node_tests.rs  simulated_clock.rs  simulated_cluster.rs  simulated_network.rs  test_harness.rs  test_listener.rs  test_state_machine.rs  trait_tests.rs
xraft-test/src/mocks/: clock.rs  listener.rs  log_store.rs  mod.rs  quorum_state_store.rs  snapshot_io.rs  state_machine.rs  transport.rs
xraft-test/tests/: async_replication_scenarios.rs  bootstrap_test.rs  invariant_checker_tests.rs  membership_snapshot_integration.rs  replication_commit_scenarios.rs
xraft-transport/: Cargo.toml
xraft-transport/src/: channel.rs  codec.rs  lib.rs  simulator.rs  tcp.rs
