[workspace]
members = [
    "xraft-core",
    "xraft-storage",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bytes = "1"
tracing = "0.1"
async-trait = "0.1"
rand = "0.8"
