[workspace]
members = [
    "xraft-core",
    "xraft-storage",
    "xraft-transport",
    "xraft-test",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
bytes = { version = "1", features = ["serde"] }
tracing = "0.1"
async-trait = "0.1"
thiserror = "2"
rand = "0.8"
