[package]
name = "xraft-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
bytes = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "rt"] }

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
bytes = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dependencies]
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
bytes = { version = "1", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
