[package]
name = "xraft-storage"
edition.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
xraft-core = { path = "../xraft-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
crc32c = "0.6"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
