[package]
name = "xraft-storage"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
xraft-core = { path = "../xraft-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
bincode = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
crc32c = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
