[package]
name = "xraft-storage"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
xraft-core = { path = "../xraft-core" }
anyhow = "1"
async-trait = "0.1"
bincode = "1"
bytes = "1"
crc32fast = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
