[package]
name = "xraft-test"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
xraft-core = { path = "../xraft-core" }
xraft-storage = { path = "../xraft-storage" }
xraft-transport = { path = "../xraft-transport" }
bytes = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
