[package]
name = "xraft-test"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
xraft-core = { path = "../xraft-core" }
xraft-storage = { path = "../xraft-storage" }
xraft-transport = { path = "../xraft-transport" }
bytes = { workspace = true }
