[package]
name = "xraft-transport"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
xraft-core = { path = "../xraft-core" }
tokio = { version = "1", features = ["sync"] }
bincode = "1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync"] }
uuid = { version = "1", features = ["v4"] }
