[package]
name = "xraft-transport"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
xraft-core = { path = "../xraft-core" }
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true

[dependencies]
xraft-core = { path = "../xraft-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
